<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgdesign"
    tools:context=".ChangePasswordActivity">

    <ScrollView
        android:id="@+id/sv_ChangePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="30dp">

        <LinearLayout
            android:id="@+id/ll_ChangePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/tv_ChangePaswordCofexLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/app_name"
                android:textColor="@android:color/black"
                android:textSize="40sp"
                android:textStyle="bold"/>

            <ImageView
                android:id="@+id/iv_ChangePasswordLogo"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:background="@drawable/logo"/>

            <TextView
                android:id="@+id/tv_ChangePasswordLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingBottom="20dp"
                android:text="@string/changeYourPassword"
                android:textColor="@color/lightChocolate"
                android:textSize="28sp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/et_CurrentPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/currentPassword"
                android:inputType="textPassword"
                android:padding="20dp"
                android:typeface="normal"/>

            <EditText
                android:id="@+id/et_NewPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/newPassword"
                android:inputType="textPassword"
                android:padding="20dp"
                android:textColor="@android:color/black"/>

            <EditText
                android:id="@+id/et_ConfirmNewPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirmNewPassword"
                android:inputType="textPassword"
                android:padding="20dp"
                android:textColor="@android:color/black"/>

            <Button
                android:id="@+id/btn_UpdatePassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30sp"
                android:backgroundTint="@color/lightChocolate"
                android:text="@string/updatePassword"
                android:textColor="@android:color/white"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>