<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    app:cardBackgroundColor="@android:color/white"
    app:cardUseCompatPadding="true"
    app:cardCornerRadius="15dp"
    app:cardElevation="8dp"
    app:contentPadding="10dp">

    <RelativeLayout
        android:id="@+id/rl_Cafe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_CafeName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:text="@string/defaultCafeNameValue"
            android:textColor="@android:color/black"
            android:textSize="28sp"
            android:textStyle="bold"/>

        <ImageView
            android:id="@+id/iv_CafeImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_below="@+id/tv_CafeName"/>

        <TextView
            android:id="@+id/tv_CafeRateLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_CafeName"
            android:layout_marginStart="15dp"
            android:layout_toEndOf="@+id/iv_CafeImage"
            android:text="@string/cafeRateLabel"
            android:textColor="@android:color/primary_text_light"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/tv_CafeRate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_CafeName"
            android:layout_marginStart="15dp"
            android:layout_toEndOf="@+id/tv_CafeRateLabel"
            android:text="@string/defaultCafeRateValue"
            android:textColor="@android:color/holo_orange_dark"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/tvCafeAddressLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_CafeRateLabel"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@+id/iv_CafeImage"
            android:text="@string/cafeAddressLabel"
            android:textColor="@android:color/black"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/tv_CafeAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvCafeAddressLabel"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="10dp"
            android:layout_toEndOf="@+id/iv_CafeImage"
            android:text="@string/defaultCafeAddressValue"
            android:textColor="@android:color/holo_orange_dark"
            android:textSize="18sp"/>
    </RelativeLayout>
</androidx.cardview.widget.CardView>