<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CafeDetailActivity">

    <ScrollView
        android:id="@+id/sv_CafeDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp">

        <RelativeLayout
            android:id="@+id/ll_CafeDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/tv_DetailCafeName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:gravity="center_horizontal"
                android:text="@string/defaultCafeNameValue"
                android:textAllCaps="true"
                android:textColor="@color/lightChocolate"
                android:textSize="28sp"
                android:textStyle="bold"/>

            <ImageView
                android:id="@+id/iv_DetailCafeImage"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginBottom="15dp"
                android:layout_below="@+id/tv_DetailCafeName"
                android:layout_centerHorizontal="true"
                android:gravity="center"/>

            <TextView
                android:id="@+id/tv_DetailCafeRateLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/iv_DetailCafeImage"
                android:layout_centerHorizontal="true"
                android:text="@string/cafeRateLabel"
                android:textColor="@android:color/primary_text_light"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tv_DetailCafeRate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_below="@+id/tv_DetailCafeRateLabel"
                android:layout_centerHorizontal="true"
                android:text="@string/defaultCafeRateValue"
                android:textColor="@android:color/primary_text_light"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/tv_DetailCafeAddressLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_DetailCafeRate"
                android:layout_centerHorizontal="true"
                android:layout_marginEnd="9dp"
                android:text="@string/cafeAddressLabel"
                android:textColor="@android:color/primary_text_light"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tv_DetailCafeAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_below="@+id/tv_DetailCafeAddressLabel"
                android:layout_centerHorizontal="true"
                android:text="@string/defaultCafeAddressValue"
                android:textColor="@android:color/primary_text_light"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/tv_DetailCafeLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_DetailCafeAddress"
                android:layout_marginBottom="10dp"
                android:background="@color/lightChocolate"
                android:gravity="center_horizontal"
                android:text="@string/cafeMenu"
                android:textColor="@android:color/white"
                android:textSize="28sp"
                android:textStyle="bold"/>

            <LinearLayout
                android:id="@+id/ll_CafeDetailCoffeList"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_below="@+id/tv_DetailCafeLabel"
                android:layout_marginBottom="15dp">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_DetailCafeCoffeeList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <Button
                android:id="@+id/btn_DetailCafeCheckout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ll_CafeDetailCoffeList"
                android:layout_centerHorizontal="true"
                android:backgroundTint="@color/lightChocolate"
                android:text="@string/checkout"
                android:textColor="@android:color/white"/>
        </RelativeLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_DetailCafeLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@android:color/primary_text_light_nodisable"
        android:elevation="10dp"
        android:src="@drawable/ic_baseline_location_on_24"
        app:fabSize="normal"/>
</RelativeLayout>