<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    app:cardCornerRadius="20dp"
    app:cardElevation="8dp"
    app:cardUseCompatPadding="true"
    app:contentPadding="20dp">

    <LinearLayout
        android:id="@+id/ll_DeleteConfirmationTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <View
            android:id="@+id/v_DeleteConfirmationTop"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/ic_wave"/>

        <ImageView
            android:id="@+id/iv_DeleteConfirmationIcon"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:background="@drawable/ic_delete"/>

        <TextView
            android:id="@+id/tv_DeleteConfirmationLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/deleteConfirmation"
            android:textAlignment="center"
            android:textSize="15sp"
            android:textStyle="bold"/>

        <LinearLayout
            android:id="@+id/ll_DeleteConfirmation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:gravity="center">

            <Button
                android:id="@+id/btn_DeleteConfirmationYes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="10dp"
                android:background="@color/lightOrange"
                android:text="@string/yes"
                android:textAllCaps="false"/>

            <Button
                android:id="@+id/btn_DeleteConfirmationNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:background="@color/lightOrange"
                android:text="@string/no"
                android:textAllCaps="false"/>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>